RESOLVED FIXED264550
[Win] Crash in GLContext::makeContextCurrent under WCSceneContext::makeContextCurrent
https://bugs.webkit.org/show_bug.cgi?id=264550
Summary [Win] Crash in GLContext::makeContextCurrent under WCSceneContext::makeContex...
Fujii Hironori
Reported 2023-11-09 21:44:17 PST
Created attachment 468552 [details] crash log I'm observing GPU proces crash with Windows Debug 270468@main by running layout tests > python .\Tools\Scripts\run-webkit-tests --debug --iter=100 -f --no-retry --no-show compositing/shared-backing/backing-sharing-compositing-change.html compositing/shared-backing/move-sharing-child.html or > python .\Tools\Scripts\run-webkit-tests --debug --iter=10 -f --no-retry --no-show compositing/shared-backing Stderr: > Could not create EGL context. Callstack: Frame[00] Triage Symbol: [WebCore!WebCore::GLContext::makeContextCurrent+0x18] Frame[01] Triage Symbol: [WebKit2!WebKit::WCSceneContext::makeContextCurrent+0x1c] Frame[02] Triage Symbol: [WebKit2!WebKit::WCScene::initialize+0x39] Frame[03] Triage Symbol: [WebKit2!WebKit::RemoteWCLayerTreeHost::RemoteWCLayerTreeHost::<lambda_0>::operator+0x65] Frame[04] Triage Symbol: [WebKit2!WTF::Detail::CallableWrapper<`lambda at C:\webkit\Source\WebKit\GPUProcess\graphics\wc\RemoteWCLayerTreeHost.cpp:69:46',void>::call+0x17] Frame[05] Triage Symbol: [WebKit2!WTF::Function<void ()>::operator+0x85] Frame[06] Triage Symbol: [WebKit2!IPC::StreamConnectionWorkQueue::processStreams+0x121] Frame[07] Triage Symbol: [WebKit2!IPC::StreamConnectionWorkQueue::startProcessingThread::<lambda_0>::operator+0x2f] Frame[08] Triage Symbol: [WebKit2!WTF::Detail::CallableWrapper<`lambda at C:\webkit\Source\WebKit\Platform\IPC\StreamConnectionWorkQueue.cpp:123:17',void>::call+0x17] Frame[09] Triage Symbol: [WTF!WTF::Function<void ()>::operator+0x84] Frame[0a] Triage Symbol: [WTF!WTF::Thread::entryPoint+0x1cb] Frame[0b] Triage Symbol: [WTF!WTF::wtfThreadEntryPoint+0x13] Frame[0c] Triage Symbol: [ucrtbase!thread_start<unsigned int (__cdecl*)(void *),1>+0x42] Frame[0d] Triage Symbol: [KERNEL32!BaseThreadInitThunk+0x14] Frame[0e] Triage Symbol: [ntdll!RtlUserThreadStart+0x21]
Attachments
crash log (74.21 KB, text/plain)
2023-11-09 21:44 PST, Fujii Hironori
no flags
Radar WebKit Bug Importer
Comment 1 2023-11-16 21:45:15 PST
Fujii Hironori
Comment 2 2024-01-21 21:15:07 PST
EWS
Comment 3 2024-01-22 13:23:59 PST
Committed 273315@main (4c9e5ce1f241): <https://commits.webkit.org/273315@main> Reviewed commits have been landed. Closing PR #23031 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.