[Win] Crash in GLContext::makeContextCurrent under WCSceneContext::makeContextCurrent https://bugs.webkit.org/show_bug.cgi?id=264550

Reviewed by Don Olmstead.

Running layout tests was randomly observing assertion failures in GPU
process due to OpenGL context creation failures for Windows port. It
was relatively reproducible with the following invocation:

> python .\Tools\Scripts\run-webkit-tests --debug --iter=100 -f --no-retry --no-show compositing/shared-backing/backing-sharing-compositing-change.html compositing/shared-backing/move-sharing-child.html

In that cases, the HWND was already closed in UI process. We have to
check the GLContext validity and the return value of
makeContextCurrent in GPU process.

* Source/WebKit/GPUProcess/graphics/wc/WCScene.cpp:
* Source/WebKit/GPUProcess/graphics/wc/WCSceneContext.cpp:

Canonical link: https://commits.webkit.org/273315@main